--- a/game/monster-truck-vs-zombie.html
+++ b/game/monster-truck-vs-zombie.html
@@ -4,7 +4,7 @@
           <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
-          <title>Monster Truck vs Zombie Unblocked: Play Now for Free on FAF Games</title>
+          <title>Monster Truck vs Zombie Unblocked: Play Now at 76 Unblocked Games</title>
           <meta name="description" content="A side-scrolling monster truck driving game is called Monster Truck Destroyer. 
           Making as much havoc as you can along the way, finish all the tracks!">
            <meta name="news_keywords" content="monster truck destroyer game
@@ -15,9 +15,9 @@
            monster truck racing
            monster trucks game for kids 2
            free monster truck video games">
-         <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/monster-truck-vs-zombie.html" />
-	<meta name="publisher" content="FAF Games Team">
+         <meta name="author" content="76 Unblocked Games Team">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/monster-truck-destroyer.html" />
+	<meta name="publisher" content="76 Unblocked Games Team">
 	<meta name="robots" content="index, follow">
           <!-- Favicon -->
           <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -298,7 +298,7 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="FAF Games" /></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="76 Unblocked Games" /></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -1227,7 +1227,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -1273,7 +1273,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
