--- a/game/real-flying-truck.html
+++ b/game/real-flying-truck.html
@@ -4,8 +4,9 @@
                <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
                <meta name="viewport" content="width=device-width, initial-scale=1">
                <meta http-equiv="X-UA-Compatible" content="IE=edge">
-               <title>Real Flying Truck Unblocked: Play Now for Free on FAF Games</title>
+               <title>Real Flying Truck Unblocked: Play Now at 76 Unblocked Games</title>
                <meta name="description" content="
+Play Real Flying Truck and experience the thrill of driving and flying powerful trucks in adventurous open worlds. Take control, perform stunts, and enjoy the ride.
                 ">
               <meta name="news_keywords" content="the truck game
               flying truck jump game
@@ -16,9 +17,9 @@
               russian truck game
               crazy truck 
               truck driver game">
-               <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/real-flying-truck.html" />
-	<meta name="publisher" content="FAF Games Team">
+               <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/real-flying-truck.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
                <!-- Favicon -->
                <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -299,7 +300,7 @@
            <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -1220,7 +1221,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
